# pruning

./: .gitignore  CLAUDE.md  README.md  eval.py  gcg.py  load_data.py  main.py  main_low_rank.py  main_low_rank_diff.py  mmlu_pro.py  pyproject.toml  pyrightconfig.json  simple_prune.py  snip_offpol.py  snip_run.py  snip_utils.py
.claude/: settings.local.json
data/: benign_on_policy.jsonl  benign_requests.py
experiments/: run_diagonal_sweep.sh  snip_sweep.sh
lib/: data.py  eval.py  model_wrapper.py  model_wrapper_low.py  prune.py
plotting/: base_abs_small.py  benign.py
results/p0.001_q0.01_1102:212322/: config.json
results/tmp_p0.001_q0.01_base/: ASR_0.json  ASR_1.json  ASR_2.json  ASR_None.json  zero_shot_results.json
results/tmp_p0.05_q0.03/: ASR_0.json  ASR_1.json  ASR_2.json  ASR_None.json
