[project]
name = "pruning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.11.0",
    "datasets>=4.3.0",
    "hf-transfer>=0.1.9",
    "numpy>=2.2.6",
    "pandas>=2.3.3",
    "pydantic>=2.12.3",
    "torch>=2.8.0",
    "tqdm>=4.67.1",
    "transformers>=4.57.1",
    "vllm>=0.11.0",
]
