[project]
name = "pruning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.11.0",
    "black>=25.9.0",
    "datasets>=4.3.0",
    "hf-transfer>=0.1.9",
    "ipykernel>=7.1.0",
    "ipywidgets>=8.1.7",
    "kaleido>=1.1.0",
    "lm-eval",
    "numpy>=2.2.6",
    "pandas>=2.3.3",
    "plotly>=6.3.1",
    "pydantic>=2.12.3",
    "torch>=2.8.0",
    "tqdm>=4.67.1",
    "vllm>=0.1.2",
]

[tool.uv.sources]
lm-eval = { path = "../lm-evaluation-harness", editable = true }
